{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 57,
  "lineage": "b857c49b-14a9-ac82-d3d5-0941ecbb25d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023b81c9a5e4bb784",
            "arn": "arn:aws:ec2:us-east-1:221082189434:elastic-ip/eipalloc-023b81c9a5e4bb784",
            "domain": "vpc",
            "id": "eipalloc-023b81c9a5e4bb784",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-94-238-21.compute-1.amazonaws.com",
            "public_ip": "3.94.238.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "onehouse-nat-eip-staging"
            },
            "tags_all": {
              "Name": "onehouse-nat-eip-staging"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "onehouse_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:internet-gateway/igw-048201c19eb3a0bde",
            "id": "igw-048201c19eb3a0bde",
            "owner_id": "221082189434",
            "tags": {
              "Name": "onehouse-igw-staging"
            },
            "tags_all": {
              "Name": "onehouse-igw-staging"
            },
            "vpc_id": "vpc-06120857f20741e90"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "onehouse_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-023b81c9a5e4bb784",
            "association_id": "eipassoc-03f610ea851134d47",
            "connectivity_type": "public",
            "id": "nat-07dbe6a91b06e0795",
            "network_interface_id": "eni-0f1bc4f1c153c4342",
            "private_ip": "10.162.64.188",
            "public_ip": "3.94.238.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0195821aa2e2fb42b",
            "tags": {
              "Name": "onehouse-nat-gateway-staging"
            },
            "tags_all": {
              "Name": "onehouse-nat-gateway-staging"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02cabf9dd9afc20671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07dbe6a91b06e0795",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cabf9dd9afc2067",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.onehouse_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048201c19eb3a0bde",
            "id": "r-rtb-024c23387c8b7a3161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024c23387c8b7a316",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.onehouse_igw",
            "aws_route_table.public_rt",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:route-table/rtb-02cabf9dd9afc2067",
            "id": "rtb-02cabf9dd9afc2067",
            "owner_id": "221082189434",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table-staging"
            },
            "tags_all": {
              "Name": "private-route-table-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-06120857f20741e90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:route-table/rtb-024c23387c8b7a316",
            "id": "rtb-024c23387c8b7a316",
            "owner_id": "221082189434",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table-staging"
            },
            "tags_all": {
              "Name": "public-route-table-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-06120857f20741e90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db58456331c3a0cc",
            "route_table_id": "rtb-02cabf9dd9afc2067",
            "subnet_id": "subnet-00497b0d8b02f0079"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_link_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e63d1dbbcc2a1b9",
            "route_table_id": "rtb-02cabf9dd9afc2067",
            "subnet_id": "subnet-05179f8eb8466bc0d"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_link_2",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098749905345645f4",
            "route_table_id": "rtb-024c23387c8b7a316",
            "subnet_id": "subnet-0195821aa2e2fb42b"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d1e02b687db0a20",
            "route_table_id": "rtb-024c23387c8b7a316",
            "subnet_id": "subnet-092811ad799ed960d"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_link_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-00497b0d8b02f0079",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.78.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00497b0d8b02f0079",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-link-1-staging"
            },
            "tags_all": {
              "Name": "private-link-1-staging"
            },
            "vpc_id": "vpc-06120857f20741e90"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_link_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-05179f8eb8466bc0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.79.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05179f8eb8466bc0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-link-2-staging"
            },
            "tags_all": {
              "Name": "private-link-2-staging"
            },
            "vpc_id": "vpc-06120857f20741e90"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-0195821aa2e2fb42b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.162.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0195821aa2e2fb42b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1-staging"
            },
            "tags_all": {
              "Name": "public-subnet-1-staging"
            },
            "vpc_id": "vpc-06120857f20741e90"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:subnet/subnet-092811ad799ed960d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.162.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092811ad799ed960d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082189434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2-staging"
            },
            "tags_all": {
              "Name": "public-subnet-2-staging"
            },
            "vpc_id": "vpc-06120857f20741e90"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "onehouse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:vpc/vpc-06120857f20741e90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.162.64.0/20",
            "default_network_acl_id": "acl-06eadbc2169f06acb",
            "default_route_table_id": "rtb-0da4cf48ff0f3a604",
            "default_security_group_id": "sg-027dbfd8c1e3a33cd",
            "dhcp_options_id": "dopt-0b21b56400c1fe805",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06120857f20741e90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da4cf48ff0f3a604",
            "owner_id": "221082189434",
            "tags": {
              "Name": "onehouse-staging"
            },
            "tags_all": {
              "Name": "onehouse-staging"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:221082189434:vpc-endpoint/vpce-09f5afda5d09f5fee",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-09f5afda5d09f5fee",
            "owner_id": "221082189434",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "Onehouse-endpoint-staging"
            },
            "tags_all": {
              "Name": "Onehouse-endpoint-staging"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06120857f20741e90"
          },
          "dependencies": [
            "aws_vpc.onehouse"
          ]
        }
      ]
    }
  ]
}